--- a/Spring4MVCAngularJSExample/pom.xml
+++ b/Spring4MVCAngularJSExample/pom.xml
@@ -49,6 +49,12 @@
             <artifactId>jstl</artifactId>
             <version>1.2</version>
         </dependency>
+        
+         <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
     </dependencies>
  
  
